# Lithe

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Lithe.h  README.md  changelist.txt  install.sh  uninstall.sh
Lithe/: Atlas.h  Attenuverter.h  Exceptions.h  Inlet.h  LitheCore.h  Node.h  Outlet.h  Parameter.h  ParameterField.h  Patcher.h  Sample.h  Sink.h  Sorter.h  SphericalAtlas.h  ToricAtlas.h  Utils.h
allocore-build/: CMakeLists.txt  install.sh  readme.md  uninstall.sh
cmake/: gtest-integration.cmake
core/: Block.cpp  Block.h  CMakeLists.txt  Inlet.h  LitheCore.h  Node.h  Outlet.h  Patcher.cpp  Patcher.h  Sink.h  Terminal.h
core/include/: Atlas.h  Inlet.h  LitheCore.h  ModuleBase.h  Node.h  Outlet.h  Patcher.h  Sample.h  Sink.h  Sorter.h
core/src/: Atlas.cpp  Block.cpp  Inlet.cpp  Node.cpp  Outlet.cpp  Patcher.cpp  Sample.cpp  Sink.cpp
docs/: CMakeLists.txt  DoxyFile
modules/: CMakeLists.txt  Dummy.cpp  Dummy.h  LitheModules.h
modules/ExampleModule/: TemplateNode.cpp  TemplateNode.h  TemplateSink.cpp  TemplateSink.h
modules/Oscillator/: CMakeLists.txt  Oscillator.cpp  Oscillator.h
modules/OutputModule/: CMakeLists.txt  OutputModule.cpp  OutputModule.h
src/: Atlas.cpp  Exception.cpp  Inlet.cpp  Node.cpp  Outlet.cpp  Patcher.cpp  Sample.cpp  Sink.cpp  Sorter.cpp  SphericalAtlas.cpp  ToricAtlas.cpp
test/: CMakeLists.txt
test/testAtlas/: CMakeLists.txt  SphericalTestAtlas.hpp  testAtlas.cpp  testAtlas.h
test/testBlock/: CMakeLists.txt  testBlock.cpp  testBlock.h
test/testDummy/: CMakeLists.txt  testDummy.cpp  testDummy.h
test/testInlet/: CMakeLists.txt  testInlet.cpp  testInlet.h
test/testNode/: CMakeLists.txt  InheritedNode.hpp  testNode.cpp  testNode.h
test/testOscillator/: CMakeLists.txt  testOscillator.cpp  testOscillator.h
test/testOutlet/: CMakeLists.txt  mockInlet.h  testOutlet.cpp  testOutlet.h
test/testOutputModule/: CMakeLists.txt  DummyNode.hpp  testOutputModule.cpp  testOutputModule.h
test/testParameter/: CMakeLists.txt  MockInlet.hpp  MockParameter.hpp  testParameter.cpp  testParameter.h
test/testParameterField/: CMakeLists.txt  testParameterField.cpp  testParameterField.h
test/testPatcher/: CMakeLists.txt  testPatcher.cpp  testPatcher.h
test/testSample/: CMakeLists.txt  testSample.cpp  testSample.h
test/testSink/: CMakeLists.txt  DSPSink.hpp  ProcessingNode.hpp  testSink.cpp  testSink.h
test/testSorter/: CMakeLists.txt  testSorter.cpp  testSorter.h
test/testSphericalAtlas/: CMakeLists.txt  SphericalTestAtlas.hpp  testSphericalAtlas.cpp  testSphericalAtlas.h
test/testTemplate/: CMakeLists.txt  testTemplate.cpp
test/testTerminal/: CMakeLists.txt  testTerminal.cpp  testTerminal.h
test/testToricAtlas/: CMakeLists.txt  TestAtlas.h  expected_u.h  expected_v.h  testToricAtlas.cpp  testToricAtlas.h
